--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,3 +19,10 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+  run-windows-commands:
+    runs-on: windows-latest
+    steps:
+      - name: Directory PowerShell
+        run: Get-Location
+      - name: pwd
+        run: bash
