--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,19 @@
 name: Actions Workflow
 
 on: 
-  repository_dispatch:
-    types: [build]
+  push:
+    branches:
+      - master
+      - feature/* # matches feature/featA feature/featB doesn't match feature/feat/a
+      - '!feature/**' # except
+    tags:
+      - v1
+    paths:
+      - '**.js' # will trigger if there's a js file in the path
+    # paths-ignore:
+    #   - 'docs/**'
+  # repository_dispatch:
+  #   types: [build]
   # schedule:
   #   - cron: "0/5 * * * *"
   #   - cron: "0/6 * * * *"
