env variables correction

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -12,7 +12,7 @@ jobs:
       JOB_ENV: Available to all steps in the log-env job
     steps:
       - name: Log ENV Variable
-      - env:
+        env:
           STEP_ENV: Available only this step
         run: |
           echo "WF_ENV: ${WF_ENV}"
