--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,18 +1,18 @@
 name: Actions Workflow
 
 on: 
-  push:
-    branches:
-      - master
-      - feature/* # matches feature/featA feature/featB doesn't match feature/feat/a
-      - '!feature/**' # except
-    tags:
-      - v1
-    paths:
-      - '**.js' # will trigger if there's a js file in the path
+  # push:
+  #   branches:
+  #     - master
+  #     - feature/* # matches feature/featA feature/featB doesn't match feature/feat/a
+  #     - '!feature/**' # except
+  #   tags:
+  #     - v1
+  #   paths:
+  #     - '**.js' # will trigger if there's a js file in the path
     # paths-ignore:
     #   - 'docs/**'
-  # repository_dispatch:
+  repository_dispatch:
   #   types: [build]
   # schedule:
   #   - cron: "0/5 * * * *"
