push random file

--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,8 +4,32 @@ on: push
 
 env:
   WF_ENV: Available ot all jobs
+# WF_ENV_SECRET: ${{ secrets.SECRET_KEY }} # get encrypted secret env variable from github settings
 
 jobs:
+  github-api:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Push a random file
+        run: |
+          pwd
+          ls -a
+          echo "Initialize the repository manually with env variables GITHUB_ACTOR (User name) and the secret token provided by the VM"
+          git init
+          git remote add origin "https://$GITHUB_ACTOR:${{ secret.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git config --global user.email "eugeniotesio@gmail.com"
+          git config --global user.name "EugenioTesio"
+          git fetch
+          git checkout master
+          git branch --set-upstream-to=origin/master
+          git pull
+          ls -a
+          echo "Generate a random file using a linux random number generator"
+          echo $RANDOM >> random.txt
+          ls -a
+          git add -A
+          git commit -m"random file"
+          git push
   log-env:
     runs-on: ubuntu-latest
     env: 
