--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -16,7 +16,7 @@ jobs:
           ls -a
           echo "Initialize the repository manually with env variables GITHUB_ACTOR (User name) and the secret token provided by the VM"
           git init
-          git remote add origin "https://$GITHUB_ACTOR:${{ secret.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
+          git remote add origin "https://$GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY.git"
           git config --global user.email "eugeniotesio@gmail.com"
           git config --global user.name "EugenioTesio"
           git fetch
