--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -20,7 +20,7 @@ jobs:
           git config --global user.email "eugeniotesio@gmail.com"
           git config --global user.name "EugenioTesio"
           git fetch
-          git checkout master
+          git checkout main
           git branch --set-upstream-to=origin/master
           git pull
           ls -a
